The init of Preferences instance should affect the singleton InputMethodManager state only when the preferences belongs to the active user.

Bug: 841112
Change-Id: I7ed3cb2cbd8c0a27cab869f336c93c1a5becefa6
Reviewed-on: https://chromium-review.googlesource.com/1125646
Commit-Queue: Shu Chen <shuchen@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573595}
Former-commit-id: 8e53e8ede7255859583e1e0b82768c8b210dcf42